--- a/src/app/pages/tanimlar/urun/urun.component.html
+++ b/src/app/pages/tanimlar/urun/urun.component.html
@@ -1,7 +1,7 @@
 
 
 
-<stok-tanimlar-design>
+<urun-tanimlar-design>
 
 
 
@@ -69,10 +69,10 @@
   
         <ul class="dropdown-menu dropdown-action-menu" style="z-index: 9999;">
           <li type="button">
-            <a class="dropdown-item dropdown-action-item">Item 1</a>
+            <a class="dropdown-item dropdown-action-item">Teklif Al</a>
           </li>
           <li type="button">
-            <a class="dropdown-item dropdown-action-item">Item 2</a>
+            <a class="dropdown-item dropdown-action-item">Sipariş Ver</a>
           </li>
   
   
@@ -110,4 +110,4 @@
     </div>
   
   
-  </stok-tanimlar-design>
+  </urun-tanimlar-design>
