--- a/src/app/pages/maliyet/kabin-maliyet/kabin-maliyet.component.html
+++ b/src/app/pages/maliyet/kabin-maliyet/kabin-maliyet.component.html
@@ -1,1 +1,205 @@
-<p>kabin-maliyet works!</p>
+<div class="grid grid-cols-[2fr_2fr_1fr] gap-1 ">
+
+    <div class=" p-1 text-white">
+        <div class="card h-full ">
+            <div class="card-body  rounded overflow-hidden ">
+                <div style="padding: 0 10px;">
+
+
+                      <!-- <kabin-maliyet-form [span]="130" [label]="'Ürün'">
+                        <p-autoComplete form-control [(ngModel)]="selectedUrunler" [dropdown]="true"
+                            placeholder="Ürün giriniz.." (onFocus)="onFocus()" (ngModelChange)="ngModelChange()"
+                            [suggestions]="filteredUrunler" (completeMethod)="filterUrunler($event)" optionLabel="ad"
+                            field="ad" />
+                    </kabin-maliyet-form>  -->
+
+                    
+                 <p-divider />
+
+                        
+<!-- 
+                    <kabin-maliyet-form [span]="130" [label]="'Karkas Tipi'">
+                        <p-dropdown form-control [options]="karkasTipleri" [(ngModel)]="frm.karkasTipleri" optionLabel="ad"
+                        (ngModelChange)="onKarkasTipiChange(frm.karkasTipleri)" />
+                    </kabin-maliyet-form> -->
+
+                    <kabin-maliyet-form [span]="130" [label]="'Ürün Grubu'">
+                        <input form-control [(ngModel)]="frm.aciklama" name="aciklama"
+                            class="form-control shadow-none form-control-nullable" id="exampleFormControlInput1">
+                    </kabin-maliyet-form> 
+                    <kabin-maliyet-form [span]="130" [label]="'Ürün Adı'">
+                        <input form-control [(ngModel)]="frm.aciklama" name="aciklama"
+                            class="form-control shadow-none form-control-nullable" id="exampleFormControlInput1">
+                    </kabin-maliyet-form> 
+
+                   
+
+                    
+
+
+
+
+
+
+                </div>
+
+
+
+
+            </div>
+            <div class="card-footer py-1">
+                <small class="text-muted flex justify-between items-center">
+                    Son Hesapla: 3 gün önce
+
+                    <div  class="hover:cursor-pointer hover:bg-slate-200 p-1 rounded-sm text-base">
+                        Hesapla</div>
+                </small>
+            </div>
+        </div>
+    </div>
+    <div class=" p-1 text-white flex flex-col border ">
+
+        <p-table  [value]="rowData" dataKey="id" selectionMode="multiple" [(selection)]="selectedRows"  [scrollable]="true" 
+        scrollHeight="400px" 
+            [metaKeySelection]="false" [tableStyle]="{'min-width': '50rem'}">
+            <ng-template pTemplate="header">
+                <tr>
+                    <th style="width: 4rem"><p-tableHeaderCheckbox /></th>
+                    <th>Ad</th>
+                    <th>Miktar</th>
+                    <th>Birim</th>
+                    <th>Birim Fiyat</th>
+                    <th>Döviz</th>
+                    <th>Toplam Fiyat</th>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-product let-rowIndex="rowIndex">
+                <tr [pSelectableRow]="product" [pSelectableRowIndex]="rowIndex">
+                    <td>
+                        <p-tableCheckbox [value]="product" />
+                    </td>
+                    <td>{{ product.ad }}</td>
+                     <td>{{ product.miktar }}</td>
+                    <!-- <td [pEditableColumn]="product.miktar" pEditableColumnField="miktar">
+                        <p-cellEditor>
+                            <ng-template pTemplate="input">
+                                <input 
+                                    pInputText 
+                                    type="text" 
+                                    [(ngModel)]="product.miktar" 
+                                    required />
+                            </ng-template>
+                            <ng-template pTemplate="output">
+                                {{ product.miktar }}
+                            </ng-template>
+                        </p-cellEditor>
+                    </td> -->
+                    <td>{{ product.birim }}</td>
+                    <td>{{ product.birimFiyat }}</td>
+                    <td>{{ product.dovizCinsi }}</td>
+                    <td>{{product.dovizFiyat }}</td>
+                </tr>
+            </ng-template>
+        </p-table>
+
+    </div>
+    <div class=" p-1 text-white">
+        <p-table  id="row-check" [value]="personeller" dataKey="id" selectionMode="multiple" [(selection)]="selectedPersonelRows"
+            [metaKeySelection]="false">
+            <ng-template pTemplate="header">
+                <tr>
+                    <th style="width: 4rem"><p-tableHeaderCheckbox /></th>
+                    <th>Ad</th>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-product let-rowIndex="rowIndex">
+                <tr >
+                    <td>
+                        <p-tableCheckbox [value]="product" />
+                    </td>
+                    <td>{{ product.ad }}</td>
+                </tr>
+            </ng-template>
+        </p-table>
+    </div>
+
+
+
+
+
+</div>
+
+<table class="yks_table_group ">
+    <tbody>
+
+        <tr style="height: 25px !important;">
+            <td class="yks_td_label" style="border-left: #000000; text-align: end; text-align: end;">
+
+                <label style=" min-width: 160px; font-weight: 600; font-size: 13px; color: #7a0000;">Sac Ağırlık :
+                </label>
+            </td>
+            <td style="width: 100%;">
+
+                <label style=" min-width: 60px; 
+                font-weight: 600; 
+                font-size: 13px; 
+                color: #666666;">
+
+                    <span> {{frm.sacAgirligi}}</span>
+
+
+                </label>
+            </td>
+
+        </tr>
+        <tr style="height: 25px !important;">
+            <td class="yks_td_label" style="border-left: #000000; text-align: end; text-align: end;">
+
+                <label style=" min-width: 160px; font-weight: 600; font-size: 13px; color: #7a0000;">Toplam Ağırlık :
+                </label>
+            </td>
+            <td style="width: 100%;">
+
+                <label style=" min-width: 60px; 
+                font-weight: 600; 
+                font-size: 13px; 
+                color: #666666;">
+
+                    <span> {{frm.toplamAgirlik}}</span>
+
+
+                </label>
+            </td>
+
+        </tr>
+
+
+ 
+        <tr style="height: 25px !important;">
+            <td class="yks_td_label" style="border-left: #000000; text-align: end; text-align: end;">
+
+                <label style=" min-width: 160px; font-weight: 600; font-size: 13px; color: #7a0000;">İşçilik :
+                </label>
+            </td>
+            <td style="width: 100%;">
+
+                <label style=" min-width: 60px; 
+                font-weight: 600; 
+                font-size: 13px; 
+                color: #666666;">
+
+                    <span> 6456.62 ₺ </span>
+
+
+                </label>
+            </td>
+
+        </tr>
+
+
+
+
+
+
+    </tbody>
+</table>
